# agentfix

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: compliance-checker.yaml  static-analysis.yaml  test-generator.yaml
src/agentfix/: __init__.py
src/agentfix/compliance_checker/: cli.py  config.py  graph.py  state.py
src/agentfix/shared/: audit.py  config.py  history.py  models.py  utils.py
src/agentfix/shared/tools/: git_ops.py  github_api.py  llm_cli.py  repo.py  shell.py
src/agentfix/static_analysis/: cli.py  config.py  graph.py  models.py  state.py
src/agentfix/test_generator/: cli.py  config.py  graph.py  state.py
